# ksef_fa3

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  adnotacje.cpp  adnotacje.hpp  fa.cpp  fa.hpp  faktura.cpp  faktura.hpp  platnosc.cpp  platnosc.hpp  podmioty.cpp  podmioty.hpp  schemat.hpp  stopka.cpp  stopka.hpp  transport.cpp  transport.hpp  typy_adresowe.cpp  typy_adresowe.hpp  typy_identyfikacyjne.cpp  typy_identyfikacyjne.hpp  zalacznik.cpp  zalacznik.hpp
lib/internal/: xml_core.cpp  xml_core.hpp  xml_helpers.hpp
tests/: CMakeLists.txt  helpers.hpp  test_examples.cpp  test_main.cpp
tests/examples/: FA3_przyklad_1.xml  FA3_przyklad_10.xml  FA3_przyklad_11.xml  FA3_przyklad_12.xml  FA3_przyklad_13.xml  FA3_przyklad_14.xml  FA3_przyklad_15.xml  FA3_przyklad_16.xml  FA3_przyklad_17.xml  FA3_przyklad_18.xml  FA3_przyklad_19.xml  FA3_przyklad_2.xml  FA3_przyklad_20.xml  FA3_przyklad_21.xml  FA3_przyklad_22.xml  FA3_przyklad_23.xml  FA3_przyklad_24.xml  FA3_przyklad_25.xml  FA3_przyklad_3.xml  FA3_przyklad_4.xml  FA3_przyklad_5.xml  FA3_przyklad_6.xml  FA3_przyklad_7.xml  FA3_przyklad_8.xml  FA3_przyklad_9.xml
